--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
